# swagger.json
@@ -5,9 +5,10 @@
         "version": "1.0.0",
         "title": "Video Shop Document"
     },
-    "host": "95.156.255.148:3001",
+    "host": "http://95.156.255.148:81",
     "basePath": "/api/v1",
-    "tags": [{
+    "tags": [
+        {
             "name": "user",
             "description": "Operations about user",
             "externalDocs": {}
@@ -33,9 +34,7 @@
                 "produces": [
                     "application/json;charset=utf-8"
                 ],
-                "parameters": [
-
-                ],
+                "parameters": [],
                 "responses": {}
             }
         },
@@ -50,7 +49,8 @@
                 "produces": [
                     "application/json;charset=utf-8"
                 ],
-                "parameters": [{
+                "parameters": [
+                    {
                         "name": "category",
                         "in": "query",
                         "description": "category",
@@ -84,6 +84,20 @@
                         "description": "type: cash/free/vip",
                         "required": false,
                         "type": "string"
+                    },
+                    {
+                        "name": "orderBy",
+                        "in": "query",
+                        "description": "orderBy: popular/seller/title/createdAt/price",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "orderType",
+                        "in": "query",
+                        "description": "orderBy: asc/desc",
+                        "required": false,
+                        "type": "string"
                     }
                 ],
                 "responses": {}
@@ -100,7 +114,8 @@
                 "produces": [
                     "application/json;charset=utf-8"
                 ],
-                "parameters": [{
+                "parameters": [
+                    {
                         "name": "courseId",
                         "in": "path",
                         "description": "courseId to return what exactlly course do you want",
@@ -129,15 +144,17 @@
                 "consumes": [
                     "application/json; charset=utf-8"
                 ],
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "description": "all parameter which you need for login",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/Register"
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "all parameter which you need for login",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Register"
+                        }
                     }
-                }],
+                ],
                 "responses": {}
             }
         },
@@ -156,15 +173,17 @@
                 "produces": [
                     "application/json"
                 ],
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "description": "all parameter which you need for login",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/Login"
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "all parameter which you need for login",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Login"
+                        }
                     }
-                }],
+                ],
                 "responses": {}
             }
         },
@@ -179,13 +198,15 @@
                 "consumes": [
                     "application/json; charset=utf-8"
                 ],
-                "parameters": [{
-                    "name": "api_token",
-                    "in": "query",
-                    "description": "api token",
-                    "required": false,
-                    "type": "string"
-                }],
+                "parameters": [
+                    {
+                        "name": "api_token",
+                        "in": "query",
+                        "description": "api token",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -200,13 +221,15 @@
                 "consumes": [
                     "application/json; charset=utf-8"
                 ],
-                "parameters": [{
-                    "name": "api_token",
-                    "in": "query",
-                    "description": "api token",
-                    "required": false,
-                    "type": "string"
-                }],
+                "parameters": [
+                    {
+                        "name": "api_token",
+                        "in": "query",
+                        "description": "api token",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -221,7 +244,8 @@
                 "consumes": [
                     "application/json; charset=utf-8"
                 ],
-                "parameters": [{
+                "parameters": [
+                    {
                         "in": "body",
                         "name": "body",
                         "description": "all parameter which you need for login",
@@ -298,7 +322,6 @@
                 "comment": {
                     "type": "string"
                 }
-
             }
         }
     }
